tests/baselines/reference/propertyAccess3(strict=true).errors.txt
propertyAccess3.ts(2,1): error TS2454: Variable 'foo' is used before being assigned.
propertyAccess3.ts(2,5): error TS2339: Property 'toBAZ' does not exist on type 'boolean'.


==== propertyAccess3.ts (2 errors) ====
    var foo: boolean;
    foo.toBAZ();
    ~~~
!!! error TS2454: Variable 'foo' is used before being assigned.
        ~~~~~
!!! error TS2339: Property 'toBAZ' does not exist on type 'boolean'.